--- a/app/components/profile.mdx
+++ b/app/components/profile.mdx
@@ -19,30 +19,34 @@ Frontend Web Engineer and Director of programming boot camp course
 
 # My Life Events
 
-### 2022 - 2022/08
+### 2022 overview
 
 TypeScript, Next.js を使った Web フロントエンドアプリケーションの案件を中心に受託開発していました。
 
-### 2022/01
-
-[42 Tokyo](https://42tokyo.jp/) の 1 ヶ月にわたる入学試験を受けていました。
-試験を通じて低レベルな入出力 API のみを使って標準ライブラリを実装できるぐらいに C 言語が得意になりました。
-
-### 2021/04 - 2021/12
+### 2021 overview
 
 大学を卒業してからはフリーランスエンジニアとして活動していました。
 この時期は特に LAMP 構成のフロントエンドには Webpack を使った**Web 製作**の案件を中心に受託開発していました。
 
-### 2020/04 - 2021/03
+#### 2021/01 - 2021/02
+
+[42 Tokyo](https://42tokyo.jp/) の 1 ヶ月にわたる入学試験を受けていました。
+試験を通じて低レベルな入出力 API のみを使って標準ライブラリを実装できるぐらいに C 言語が得意になりました。
+
+### 2020 overview
+
+大学生最後の 1 年間をプログラミングを勉強しながらすごしました。
+
+#### 2020/03 - 2020/06
 
 [GeekSalon WebExpert コース](https://geek-salon.com/webex)でエンジニアリングに関する **自走力** を身に付けました。
 そのまま参画して、プログラミング教育事業の運営メンバーとして働いていました。
 
-### 2019/04 - 2020/03
+### 2019 overview
 
 アメリカの短期大学(Seattle Central College)に一年間留学してました。生涯の友人を得て帰国しました。
 
-### 2015/04 - 2019/03
+### 2015 -
 
 [静岡大学吹奏楽団](https://shizuoka-windorchestra.com/)で感動する音楽を届けることに命を燃やしていました。
 授業では、法律を学んでいました。
