🎉 /me を更新しました

--- a/app/assets/profile.mdx
+++ b/app/assets/profile.mdx
@@ -4,7 +4,7 @@ Junsei Nagao
 
 # Short description
 
-Web フロントエンドを専門にしています。 SPA を変更容易性高く設計・実装することに命を燃やしています。 得意な SPA の FW は、Next.js (React.js) と Vue.js 好きな SPA の FW は、Svelte.js と Remix 。次に使えるようになりたい技術は、Prisma.js と React Testing Library
+Web フロントエンドを専門に Web アプリケーションの開発を生業にしています。Next.js と Nest.js が得意です。
 
 # Job
 
@@ -18,6 +18,11 @@ Frontend Web Engineer and Director of programming boot camp course
 - 🎺 (Playing the Tuba)
 
 # My Life Events
+
+### 2023 overview
+
+株式会社エイチームライフデザインにて、2 つの新規開発プロジェクトに携わりました。
+副業案件で、2 つの新規開発プロジェクトに携わりました。
 
 ### 2022 overview
 
