--- a/app/assets/profile.mdx
+++ b/app/assets/profile.mdx
@@ -4,7 +4,7 @@ Junsei Nagao
 
 # Short description
 
-Web フロントエンドを専門に Web アプリケーションの開発を生業にしています。Next.js と Nest.js が得意です。
+Web フロントエンドを中心に Web アプリケーションの開発を生業にしています。JavaScript/TypeScript を中心にしたエコシステムの技術が得意です。
 
 # Job
 
@@ -18,6 +18,12 @@ Frontend Web Engineer and Director of programming boot camp course
 - 🎺 (Playing the Tuba)
 
 # My Life Events
+
+### 2024 overview
+
+#### 2024/05
+
+KODANSHAtech 合同会社に入社しました。
 
 ### 2023 overview
 
